ds.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: garage
  name: garage
  labels:
    app: garage
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  selector:
    matchLabels:
      app: garage
  template:
    metadata:
      labels:
        app: garage
    spec:
      terminationGracePeriodSeconds: 0
      hostNetwork: true
      imagePullSecrets:
      - name: registry-auth
      containers:
      - image: dxflrs/garage:v1.1.0
        name: garage
        ports:
        - containerPort: 3900
          name: s3-api
        - containerPort: 3901
          name: rpc
        - containerPort: 3902
          name: s3-web
        - containerPort: 3903
          name: admin-api
        volumeMounts:
        - name: meta
          mountPath: /var/lib/garage/meta
        - name: data
          mountPath: /var/lib/garage/data
        - name: config-xfr
          mountPath: /config
        - name: secrets
          mountPath: /secrets
        startupProbe:
          httpGet:
            path: /health
            port: admin-api
          initialDelaySeconds: 1
          periodSeconds: 1
          failureThreshold: 120
        livenessProbe:
          httpGet:
            path: /health
            port: admin-api
          initialDelaySeconds: 1
          periodSeconds: 5
          failureThreshold: 10
      volumes:
      - name: config-xfr
        emptyDir: {}
      - name: config-in
        configMap:
          name: garage-config
      - name: meta
        hostPath:
          path: /var/lib/garage/meta
          type: DirectoryOrCreate
      - name: data
        hostPath:
          path: /var/lib/garage/data
          type: DirectoryOrCreate
      - name: secrets
        secret:
          secretName: garage-secrets
      - name: nfd-features-d
        hostPath:
          path: /etc/kubernetes/node-feature-discovery/features.d
          type: DirectoryOrCreate
      restartPolicy: Always
