svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: garage
  name: garage
spec:
  selector:
    app: garage
  ports:
  - port: 3900
    name: s3-api
    protocol: TCP
    targetPort: s3-api
  - port: 3901
    name: rpc
    protocol: TCP
    targetPort: rpc
  - port: 3902
    name: s3-web
    protocol: TCP
    targetPort: s3-web
  - port: 3903
    name: admin
    protocol: TCP
    targetPort: admin

  type: ClusterIP
