direct-hosted-sites.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    haproxy-ingress.github.io/path-type: regex
  name: direct-hosted-sites
  namespace: garage
spec:
  ingressClassName: haproxy
  rules:
  - host: 'strudelline.net'
    http:
      paths:
      - path: /([^/]+.html)?$
        pathType: ImplementationSpecific
        backend:
          service:
            name: garage
            port:
              name: s3-web
